[package]
name = "stateful-load-balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
pingora = { version = "0.1", features = [ "lb" ] }
regex = "1.10.4"
serde_json = "1.0.114"
